# btc_forecast

./: .gitignore  AGENTS.md  LEARNINGS.md  MY-MEMORIES.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
experiments/bitcoin-prediction/: .env.example  .gitignore  CHART_GALLERY.md  CONTRIBUTING.md  EXAMPLE_OUTPUT.md  LIVE_RUN_SUMMARY.md  Makefile  PR_VISUAL_GUIDE.md  README.md  REAL_RESULTS.md  SUMMARY.md  WEATHER_FORECAST_EXAMPLE.md  backtest_4year.py  backtest_4year_output.txt  bitcoin_analysis.ipynb  forecast_output.txt  main.py  main_output.txt  quick_analysis.py  test_modules.py  trading_forecast.csv  trading_forecast.py  weather_forecast.py
experiments/bitcoin-prediction/results/: analysis_report.txt  backtest_4year_report.txt  backtest_4year_results.csv  backtest_Mid-term_6_months_ago.csv  backtest_Recent_Period_Last_90_days.csv
experiments/bitcoin-prediction/src/: __init__.py  analysis.py  backtesting.py  backtesting_statsforecast.py  data_utils.py
nixtla/: __init__.py
results/: analysis_report.txt
tests/: test_smoke.py
