[build-system]
requires = ["setuptools>=36.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc_forecast"
version = "0.1.0"
description = "Bitcoin price forecasting using StatsForecast"
authors = [
    {name = "Bitcoin Forecast Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas",
    "requests>=2.32.5",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["experiments/bitcoin-prediction"]
